# tui-prototypes

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md
bubble-tea-tui/: Makefile  README.md  go.mod  go.sum
bubble-tea-tui/cmd/: main.go
bubble-tea-tui/internal/app/: app.go  app_test.go
bubble-tea-tui/internal/components/: content.go  header.go  sidebar.go
bubble-tea-tui/internal/styles/: styles.go  styles_test.go
bubble-tea-tui/internal/views/: dashboard.go  data.go  help.go  settings.go  view.go
docs/: bubble-tea-tui-design.md  javascript-tui-design.md  ratatui-tui-design.md
javascript-tui/: .gitignore  Makefile  README.md  package-lock.json  package.json
javascript-tui/src/: index.js
javascript-tui/src/app/: App.js
javascript-tui/src/components/: ContentWidget.js  HeaderWidget.js  SidebarWidget.js  StatusBarWidget.js  WidgetManager.js
javascript-tui/src/styles/: StyleManager.js
javascript-tui/src/utils/: EventHandler.js
javascript-tui/src/views/: BaseView.js  DashboardView.js  DataView.js  HelpView.js  SettingsView.js  ViewManager.js
javascript-tui/tests/: App.test.js  StyleManager.test.js
javascript-tui/tests/views/: DashboardView.test.js
ratatui-tui/: Cargo.toml  Makefile  README.md
ratatui-tui/src/: app.rs  main.rs  styles.rs  views.rs  widgets.rs
