[package]
name = "ratatui-tui"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A modern Terminal User Interface built with Rust and Ratatui"
license = "MIT"
repository = "https://github.com/yourusername/ratatui-tui"

[dependencies]
# TUI Framework
ratatui = "0.26"
crossterm = "0.27"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
# Testing
criterion = "0.5"
proptest = "1.0"

# Mocking
mockall = "0.12"

# [[bench]]
# name = "rendering_bench"
# harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
